gitops-test/route.yaml
# Source: gitops-nginx-demo-test/charts/gitops-demo/templates/ingress-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gitops-demo-http
spec:
  host: gitops-test.apps.baloise.dev
  path: /
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: gitops-demo
    weight: 100
  wildcardPolicy: None
